horizontal scroll fix

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@
 
 #container {
   overflow: scroll;
+  overflow-x: hidden;
   width: 100vw;
   height: 100vh;
   scroll-snap-type: y mandatory;
@@ -34,6 +35,7 @@
   display: flex;
   flex-direction: column;
   overflow: scroll;
+  overflow-x: hidden;
 }
 
 h2 {
